<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/colorPrimary"
		android:theme="@style/ToolbarStyle"
		app:popupTheme="@style/AppTheme.PopupOverlay"
		app:titleTextColor="#fff" />

	<Button
		android:id="@+id/login_button"
		style="@style/Base.Widget.AppCompat.Button.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingBottom="15dp"
		android:paddingEnd="30dp"
		android:paddingStart="30dp"
		android:paddingTop="15dp"
		android:text="@string/login_button"
		android:textAlignment="center"
		android:textSize="30sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.56" />

	<EditText
		android:id="@+id/login_user_id"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/edit_text_background"
		android:ems="10"
		android:hint="@string/userID"
		android:inputType="textPersonName"
		android:maxLength="20"
		android:padding="5dp"
		android:textSize="36sp"
		app:layout_constraintBottom_toTopOf="@+id/login_password"
		app:layout_constraintEnd_toEndOf="@+id/login_password"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="@+id/login_password"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.92" />

	<EditText
		android:id="@+id/login_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/edit_text_background"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:maxLength="20"
		android:padding="5dp"
		android:textSize="36sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.502"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.44" />

	<Button
		android:id="@+id/create_account_button"
		style="@style/Base.Widget.AppCompat.Button.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@color/button_blue"
		android:padding="10dp"
		android:text="@string/button_create_account"
		android:textAlignment="center"
		android:textSize="24sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/login_button"
		app:layout_constraintStart_toStartOf="@+id/login_button"
		app:layout_constraintTop_toBottomOf="@+id/login_button"
		app:layout_constraintVertical_bias="0.060000002" />

</android.support.constraint.ConstraintLayout>
