...
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center"
		android:layout_margin="10dp">

		<Button
			android:id="@+id/customer_button"
			style="@style/Base.Widget.AppCompat.Button.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="onCustomerPressed"
			android:padding="15dp"
			android:text="@string/customer_main"
			android:textAlignment="center"
			android:textStyle="bold"
			android:textSize="18sp" />

		<Button
			android:id="@+id/employee_button"
			style="@style/Base.Widget.AppCompat.Button.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="onEmployeePressed"
			android:padding="15dp"
			android:text="@string/employee_main"
...
