<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/account"
		android:icon="@drawable/account_icon"
		android:title="account"
		app:showAsAction="always" />
</menu>
